--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Sunny Luthra - Traveller - Free Thinker - Blah Blah</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
-  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+  <title>Adam Schodde - Develeoper - Security Guy - System Admin Guy</title>
+  <base href="/">
+  <meta name="description" content="Super helpful description about me">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1.0, minimum-scale=1.0, maximum-scale=1.0">
+  <link rel='shortcut icon' type='image/x-icon' href="favicon.ico" />
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-114x114-precomposed.png">
@@ -55,7 +56,7 @@
                   <a href="#about"><i class="icon-user"></i><span> About Me</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
+                  <a href="//registry.jsonresume.org/adamschodde?theme=flat"><i class="icon-file-text"></i><span> Resume</span></a>
                 </li>
                 <li class='tab'>
                   <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
@@ -71,17 +72,17 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
+                                <img src="//i.imgur.com/OXugPaE.jpg" alt="Adam Schodde">
                             </div>
                             <div class="info">
                                 <h2>
-                                    Sunny Luthra
+                                    Adam Schodde
                                 </h2>
                                 <h4>
-                                    Animator / Photographer
+                                    CS Undergrad / Software Engineer / Web Developer
                                 </h4>
                                 <p>
-                                    We are mRova, a Pune-based software development company. We love to develop Websites, Desktop Softwares and Mobile Applications.
+                                    All about that Javascript!
                                 </p>
                             </div>
                         </div>
@@ -89,16 +90,13 @@
                             <div class="main-links sidebar">
                                 <ul>
                                     <li>
-                                        <a href="#resume">View My Resume</a>
+                                        <a href="//registry.jsonresume.org/adamschodde?theme=flat">Consise Resume</a>
                                     </li>
                                     <li>
                                         <a href="#portfolio">My Portfolio</a>
                                     </li>
                                     <li>
-                                        <a href="#contact">Hire me for your next project</a>
-                                    </li>
-                                    <li>
-                                        <a href="#features">Features</a>
+                                        <a href="#contact">Contact</a>
                                     </li>
                                 </ul>
                             </div>
@@ -109,25 +107,25 @@
                             <div class="item-box clearfix">
                               <i class="icon-envelope"></i>
                               <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
+                                <h3><a href="mailto:aaschodd@asu.edu">aaschodd@asu.edu</a></h3>
                                 <p>Email Address</p>
                               </div>
                             </div>
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-facebook"></i>
+                            <i class="icon-linkedin"></i>
                               <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
-                                <p>Facebook Profile</p>
+                                <h3><a href="//www.linkedin.com/in/adamschodde">Adam Schodde</a></h3>
+                                <p>LinkedIn Profile</p>
                               </div>
                             </div>
                           </div>
                           <div class="g1">
                             <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
+                            <i class="icon-twitter"></i>
                               <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
+                                <h3><a href="//twitter.com/bruta1h0n3sty">@bruta1h0n3sty</a></h3>
                                 <p>Twitter Handle</p>
                               </div>
                             </div>
@@ -136,135 +134,6 @@
                     </section><!-- content -->
                 </div>
               <!-- End About Tab Data -->
-              <!-- Resume Tab Data -->
-                <div id="resume">
-                    <section class="clearfix">
-                        <div class="g2">
-                            <h3>
-                                Work Experience
-                            </h3>
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        Freelance Web Designer
-                                    </h5><span class="label label-info">2009-2010</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Python Programmer
-                                    </h5><span class="label label-info">2010-2011</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Social Media Lunatic
-                                    </h5><span class="label label-info">2011-2012</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Being Awesome
-                                    </h5><span class="label label-danger">2012-Till Death</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                            </ul>
-                            <h3>
-                                Education
-                            </h3>
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        NoUse School
-                                    </h5><span class="label label-success">2001-2002</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Super Useless College
-                                    </h5><span class="label label-warning">2002-2008</span>
-                                    <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="g1">
-                            <div class="sidebar">
-                                <h3>
-                                    Skills
-                                </h3>
-                                <h5>
-                                    Software
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>Photoshop</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 90%"><span>Illustrator</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>InDesign</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 40%"><span>Firework</span></span>
-                                </div>
-                                <div class="meter midnight">
-                                    <span style="width: 70%"><span>Dreamweaver</span></span>
-                                </div>
-                                <div class="meter pomengrate">
-                                    <span style="width: 60%"><span>Microsoft Office</span></span>
-                                </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 65%"><span>Linux</span></span>
-                                </div>
-                                <div class="break"></div>
-                                <h5>
-                                    Design
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 33.3%"><span>User Interface</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 90%"><span>Typography</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 60%"><span>Web Applications</span></span>
-                                </div>
-                                <div class="break"></div>
-                                <h5>
-                                    Programming Language
-                                </h5>
-                                <div class="meter emerald">
-                                    <span style="width: 53.3%"><span>HTML/CSS</span></span>
-                                </div>
-                                <div class="meter carrot">
-                                    <span style="width: 80%"><span>PHP/MySql</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 95%"><span>jQuery/JavaScript</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 75%"><span>Ruby</span></span>
-                                </div>
-                                <div class="meter asbestos">
-                                    <span style="width: 82%"><span>Python</span></span>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                </div>
-              <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
                 <div id="portfolio">
                     <section class="clearfix">
@@ -329,7 +198,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                     </section>
                 </div>
               <!-- End Portfolio Data -->
@@ -342,8 +211,8 @@
                               <i class="icon-globe"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4>My Address</h4>
-                              <p>Some Apartment 405 in a jungle nearby a restaurant</p>
+                              <h4>Address</h4>
+                              <p>Tempe, Arizona</p>
                             </div>
                          </div>
                        </div>
@@ -353,8 +222,8 @@
                               <i class="icon-phone"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4>Mobile Number</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
+                              <h4></h4>
+                              <p><a href="tel:6232525969">6232525969</a></p>
                             </div>
                          </div>
                        </div>
@@ -365,12 +234,11 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>About Me</h4>
-                              <p>I love to work, so don't be shy, i am just an email away.</p>
+                              <p>I love to write code!</p>
                             </div>
                          </div>
                        </div>
                        <div class="break"></div>
-                       
                     </section>
                 </div>
               <!-- End Contact Data -->
@@ -379,7 +247,7 @@
         <!-- End Tab Container -->
         <footer>
             <p>
-                Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).
+                With ♥ from <a href="//github.com/brutalhonesty">brutalhonesty</a>
             </p>
         </footer>
     </div><!-- #main -->
