--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <header id="header">
             <div id="logo">
                 <h2>
-                    Sunny Luthra
+                    Adam Schodde
                 </h2>
                 <h4>
-                    Animator / Photographer
+                    Software Engineer / Web Developer
                 </h4>
             </div>
         </header>
