--- a/index.html
+++ b/index.html
@@ -134,6 +134,135 @@
                     </section><!-- content -->
                 </div>
               <!-- End About Tab Data -->
+              <!-- Resume Tab Data -->
+                <div id="resume">
+                    <section class="clearfix">
+                        <div class="g2">
+                            <h3>
+                                Work Experience
+                            </h3>
+                            <ul class="no-list work">
+                                <li>
+                                    <h5>
+                                        Freelance Web Designer
+                                    </h5><span class="label label-info">2009-2010</span>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Python Programmer
+                                    </h5><span class="label label-info">2010-2011</span>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Social Media Lunatic
+                                    </h5><span class="label label-info">2011-2012</span>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Being Awesome
+                                    </h5><span class="label label-danger">2012-Till Death</span>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                    </p>
+                                </li>
+                            </ul>
+                            <h3>
+                                Education
+                            </h3>
+                            <ul class="no-list work">
+                                <li>
+                                    <h5>
+                                        NoUse School
+                                    </h5><span class="label label-success">2001-2002</span>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                    </p>
+                                </li>
+                                <li>
+                                    <h5>
+                                        Super Useless College
+                                    </h5><span class="label label-warning">2002-2008</span>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante.
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="g1">
+                            <div class="sidebar">
+                                <h3>
+                                    Skills
+                                </h3>
+                                <h5>
+                                    Software
+                                </h5>
+                                <div class="meter emerald">
+                                    <span style="width: 33.3%"><span>Photoshop</span></span>
+                                </div>
+                                <div class="meter carrot">
+                                    <span style="width: 90%"><span>Illustrator</span></span>
+                                </div>
+                                <div class="meter wisteria">
+                                    <span style="width: 60%"><span>InDesign</span></span>
+                                </div>
+                                <div class="meter sunflower">
+                                    <span style="width: 40%"><span>Firework</span></span>
+                                </div>
+                                <div class="meter midnight">
+                                    <span style="width: 70%"><span>Dreamweaver</span></span>
+                                </div>
+                                <div class="meter pomengrate">
+                                    <span style="width: 60%"><span>Microsoft Office</span></span>
+                                </div>
+                                <div class="meter asbestos">
+                                    <span style="width: 65%"><span>Linux</span></span>
+                                </div>
+                                <div class="break"></div>
+                                <h5>
+                                    Design
+                                </h5>
+                                <div class="meter emerald">
+                                    <span style="width: 33.3%"><span>User Interface</span></span>
+                                </div>
+                                <div class="meter carrot">
+                                    <span style="width: 90%"><span>Typography</span></span>
+                                </div>
+                                <div class="meter wisteria">
+                                    <span style="width: 60%"><span>Web Applications</span></span>
+                                </div>
+                                <div class="break"></div>
+                                <h5>
+                                    Programming Language
+                                </h5>
+                                <div class="meter emerald">
+                                    <span style="width: 53.3%"><span>HTML/CSS</span></span>
+                                </div>
+                                <div class="meter carrot">
+                                    <span style="width: 80%"><span>PHP/MySql</span></span>
+                                </div>
+                                <div class="meter wisteria">
+                                    <span style="width: 95%"><span>jQuery/JavaScript</span></span>
+                                </div>
+                                <div class="meter sunflower">
+                                    <span style="width: 75%"><span>Ruby</span></span>
+                                </div>
+                                <div class="meter asbestos">
+                                    <span style="width: 82%"><span>Python</span></span>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+              <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
                 <div id="portfolio">
                     <section class="clearfix">
@@ -222,7 +351,7 @@
                               <i class="icon-phone"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4></h4>
+                              <h4>Phone</h4>
                               <p><a href="tel:6232525969">6232525969</a></p>
                             </div>
                          </div>
