--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <a href="#about"><i class="icon-user"></i><span> About Me</span></a>
                 </li>
                 <li class='tab'>
-                  <a href="//registry.jsonresume.org/adamschodde?theme=flat"><i class="icon-file-text"></i><span> Resume</span></a>
+                  <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
                 </li>
                 <li class='tab'>
                   <a href="#portfolio"><i class="icon-heart"></i><span> Portfolio</span></a>
@@ -90,7 +90,7 @@
                             <div class="main-links sidebar">
                                 <ul>
                                     <li>
-                                        <a href="//registry.jsonresume.org/adamschodde?theme=flat">Consise Resume</a>
+                                        <a href="#resume">Consise Resume</a>
                                     </li>
                                     <li>
                                         <a href="#portfolio">My Portfolio</a>
