--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
                                 <div class="meter carrot">
                                     <span style="width: 90%"><span>Git</span></span>
                                 </div>
-                                <div class="meter pomengrate">
+                                <div class="meter wisteria">
                                     <span style="width: 70%"><span>Microsoft Products</span></span>
                                 </div>
-                                <div class="meter asbestos">
+                                <div class="meter sunflower">
                                     <span style="width: 80%"><span>Linux</span></span>
                                 </div>
-                                <div class="meter sunflower">
+                                <div class="meter asbestos">
                                     <span style="width: 60%"><span>Cisco IOS</span></span>
                                 </div>
                                 <div class="break"></div>
