Updated quail city link.

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                                 <img src="//i.imgur.com/nr6JGWG.png" alt="Quail City Image">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://quality.com" class="btn">Full Site</a>
+                                        <a href="http://quailcity.com" class="btn">Full Site</a>
                                     </div>
                                 </div>
                             </div>
