Updated link to inb4.us

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                 <img src="//i.imgur.com/6Uk4n5y.png" alt="In B4 Image">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="://inb4.us" class="btn">Full Site</a>
+                                        <a href="//inb4.us" class="btn">Full Site</a>
                                     </div>
                                 </div>
                             </div>
