Updated sys status link.

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                 <img src="//i.imgur.com/fDtYyhH.png" alt="Sys Status Image">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://systat.us" class="btn">Full Site</a>
+                                        <a href="http://sysstat.us" class="btn">Full Site</a>
                                     </div>
                                 </div>
                             </div>
