--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <section class="clearfix">
                         <div class="g2">
                             <div class="photo">
-                                <img src="//i.imgur.com/OXugPaE.jpg" alt="Adam Schodde">
+                                <img src="//i.imgur.com/rVptc6z.jpg" alt="Adam Schodde">
                             </div>
                             <div class="info">
                                 <h2>
