Added new sites to portfolio.

--- a/index.html
+++ b/index.html
@@ -314,6 +314,27 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="g1">
+                            <div class="image">
+                                <img src="//i.imgur.com/jXVruDI.png" alt="Amiibro Image">
+                                <div class="image-overlay">
+                                    <div class="image-link">
+                                        <a href="//amiibro.com" class="btn">Full Site</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="break"></div>
+                        <div class="g1">
+                            <div class="image">
+                                <img src="//i.imgur.com/Qim35Ar.png" alt="Amiibo Scalp Check Image">
+                                <div class="image-overlay">
+                                    <div class="image-link">
+                                        <a href="//amiibo-scalp-checker.herokuapp.com" class="btn">Full Site</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </section>
                 </div>
               <!-- End Portfolio Data -->
